added query pros with matching criterias
