# api/openapi.yml
@@ -161,6 +161,32 @@ paths:
           required: true
           schema:
             type: string
+  /api/pro/avail:
+    post:
+      summary: Query all pros with matching criteria
+      description: List all pros with matched type and availability
+      tags:
+        - Pro
+      responses:
+        "200":
+          description: The results are all the pros with matching availability
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                serviceType:
+                  type: string
+                bookingDate:
+                  type: string
+                  format: date
+                startSession:
+                  type: integer
+                  format: int32
+                endSession:
+                  type: integer
+                  format: int32
   /api/booking:
     post:
       summary: create a single booking
